scrollbar issue fix

--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -2,7 +2,8 @@
 display:flex;
 justify-content:center;
 align-items:center;
-height:50px;
+padding: 10px;
+/* height:90px; */
 background-color:#FFFDEC;
 }
 
