--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -27,7 +27,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color:#3a395a;
+    color:#1a1b25;
     padding: 20px;
     width: 30px;
     height: 30px;
