--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,7 +20,7 @@ body {
   overflow: hidden;
   min-width: 320px;
   min-height: 100vh;
-  color: #ffffffde;
+  /* color: #ffffffde; */
   background-color: #dfeed3;
 
   /* background-color: #dfeed3; */
